--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ nav {
 .dropdown-content li > a {
   color: #9e9e9e; }
   .dropdown-content li > a :last-of-type {
-    color: #fb8c00; }
+    color: #50A32E; }
 
 /*------------------------------------*\
     #Section META
